<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_dog_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/add_dog_photo"
            android:layout_width="@dimen/add_photo_size"
            android:layout_height="@dimen/add_photo_size"
            android:layout_margin="@dimen/margin_default"
            android:elevation="@dimen/cardview_default_elevation"
            android:src="@drawable/ic_add_a_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/add_dog_breed"
            style="@style/add_dog_field"
            android:hint="@string/breed_hint"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toStartOf="@+id/add_dog_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_photo"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/add_dog_color"
            style="@style/add_dog_field"
            android:hint="@string/color_hint"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_dog_breed"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_photo"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/add_dog_description"
            style="@style/add_dog_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/dog_description_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_breed"
            />

        <EditText
            android:id="@+id/add_dog_number"
            style="@style/add_dog_field"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_description"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/add_dog_place"
            style="@style/add_dog_field"
            android:hint="@string/place_hint"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_number"
            tools:ignore="MissingPrefix"/>

        <EditText
            android:id="@+id/add_dog_date"
            style="@style/add_dog_field"
            android:hint="@string/date_hint"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_place"/>

        <Button
            android:id="@+id/add_dog_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="@string/add_dog_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_dog_date"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>